@@ -1,3 +1,6 @@
+2031.	[bug]		Emit a error message when "rndc refresh" is called on
+			a non slave/stub zone. [RT # 16073]
+
 2030.	[bug]		We were being overly conservative when disabling
 			openssl engine support. [RT #16030]
 
